# cudaMemHook

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  cuda_kernels.cpp  cuda_kernels.h  cudahooker.cpp  cudahooker.hpp  cudakernels.cpp  cudakernels.h  dlsym_hook.cpp  dlsym_hook.h  dlsymhooker.cpp  dlsymhooker.h  realdlsym.cpp  realdlsym.h
3rd/: CMakeLists.txt
core/: CMakeLists.txt  catch2_test_main.cpp
doc/: design_overview.md  memory_scheduler.md
example/: Makefile  test.cu  test.py
hook_v2/: CMakeLists.txt  dlsym_hook.cpp  dlsym_hook.h  real_dlsym.cpp  real_dlsym.h
hooker/: CMakeLists.txt  cudahooker.cpp  cudahooker.hpp  cudakernels.cpp  cudakernels.h  dlsymhooker.cpp  realdlsym.cpp  realdlsym.h
hooker_v2/: CMakeLists.txt  alloc.grpc.pb.cc  alloc.grpc.pb.h  alloc.pb.cc  alloc.pb.h  alloc.proto  cuda_alloc_client.cpp  cuda_alloc_client.h  cuda_alloc_server.cpp  cuda_alloc_server.h  dlsym_hooker.cpp  dlsym_hooker.h  messages.cpp  messages.h  real_dlsym.cpp  real_dlsym.h
ipc/: CMakeLists.txt  gpuipc.cpp  gpuipc.h  gpuipc_test.cpp  helper_cuda.h  helper_string.h  simpleIPC.cu
memory/: CMakeLists.txt  ischeduler.cpp  ischeduler.hpp  naive_scheduler.cpp  naive_scheduler.hpp  naive_scheduler_test.cpp
service/: CMakeLists.txt  client_test.cpp  cuda_alloc_client.cpp  cuda_alloc_client.h  cuda_alloc_server.cpp  cuda_alloc_server.h  messages.h
